[PRDG-0001] Reworked user logic
