# src/main/java/com/paradigma/filmio/core/model/UserMediaLinks.java
@@ -1,0 +1,7 @@
+package com.paradigma.filmio.core.model;
+
+public record UserMediaLinks(
+        String avatarUrl,
+        String bac
+) implements MediaLinks {
+}
